Fix required marker to not wrap to next line

--- a/frontend/styles/components/forms.scss
+++ b/frontend/styles/components/forms.scss
@@ -16,7 +16,8 @@
 
 .field-required {
   &:after {
-    content: " *";
+    content: "*";
+    margin-left: 0.25rem;
     color: darken($red, 20%);
   }
 }
